--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "license": "MIT",
     "homepage": "https://github.com/mvasilkov/POMFPOMFPOMF",
     "dependencies": {
-        "express": "^4.4.1"
+        "express": "^4.4.1",
+        "morgan": "^1.1.1",
+        "serve-favicon": "^2.0.0"
     },
     "devDependencies": {
         "mocha": "^1.20.1"
