--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "POMF =3",
     "main": "app.js",
     "scripts": {
-        "test": "node_modules/.bin/mocha"
+        "test": "node_modules/.bin/mocha -R nyan"
     },
     "repository": {
         "type": "git",
@@ -23,6 +23,7 @@
         "serve-favicon": "^2.0.0"
     },
     "devDependencies": {
-        "mocha": "^1.20.1"
+        "mocha": "^1.20.1",
+        "supertest": "^0.13.0"
     }
 }
