--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "license": "MIT",
     "homepage": "https://github.com/mvasilkov/POMFPOMFPOMF",
     "dependencies": {
+        "backbone": "^1.1.2",
+        "bootstrap_git": "^3.1.1",
         "express": "^4.4.1",
+        "jbone": "^1.0.17",
+        "lodash": "^2.4.1",
         "morgan": "^1.1.1",
+        "reqwest": "^1.1.0",
         "serve-favicon": "^2.0.0"
     },
     "devDependencies": {
