--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     ],
     "dependencies": {
         "angular": "1.3.0-beta.10",
+        "angular-route": "1.3.0-beta.10",
         "bootstrap": "~3.1.1"
     }
 }
