--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "homepage": "https://github.com/mvasilkov/POMFPOMFPOMF",
     "dependencies": {
         "express": "^4.4.1",
-        "morgan": "^1.1.1",
-        "serve-favicon": "^2.0.0"
+        "morgan": "^1.1.1"
     },
     "devDependencies": {
         "bower": "^1.3.4",
